Versão 01 - Tela de Inicio

--- a/SemanadaTecnologia/app/src/main/res/values/strings.xml
+++ b/SemanadaTecnologia/app/src/main/res/values/strings.xml
@@ -1,3 +1,6 @@
 <resources>
-    <string name="app_name">Semana da Tecnologia</string>
+    <string name="app_name">Instanai</string>
+    <string name="insta_senai">@senaijandira</string>
+    <string name="info">Semana da Tecnologia! Registre esse momento! #EuFui </string>
+    <string name="insta">SENAI Jandira</string>
 </resources>
