--- a/SemanadaTecnologia/app/src/main/res/values/strings.xml
+++ b/SemanadaTecnologia/app/src/main/res/values/strings.xml
@@ -1,5 +1,5 @@
 <resources>
-    <string name="app_name">Instanai</string>
+    <string name="app_name">Instenai</string>
     <string name="insta_senai">@senaijandira</string>
     <string name="info">Semana da Tecnologia! Registre esse momento! #EuFui </string>
     <string name="insta">SENAI Jandira</string>
